syntax = "proto3";

package grpc;

option go_package = "github.com/jmbarzee/dominion";
import "identity.proto";

service Dominion {
	// GetServices returns the available services and their locations
	rpc GetServices (GetServicesRequest) returns (GetServicesReply) {}

	// GetDomains returns all domains and their services
	rpc GetDomains (Empty) returns (GetDomainsReply) {}
}


// GetServicesRequest contains the type of the service the client is searching for
message GetServicesRequest {
	// Name is the name of the service which is requested
	string Type = 1;
}

// GetServicesReply contains the list of known addresses hosting the requested service
message GetServicesReply {
	// Services is the list of services of the requested type
	repeated ServiceIdentity Services = 1;
}



// GetDomainsReply contains all domains and their services
message GetDomainsReply {
	// Domains is the list of all domains 
	repeated DomainIdentity Domains = 1;
}

// Empty is empty, Duh.
message Empty {
}